[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/GUIBox.gd" type="Script" id=1]
[ext_resource path="res://assets/font/font.tres" type="DynamicFont" id=2]
[ext_resource path="res://theme/blue_button.tres" type="StyleBox" id=3]
[ext_resource path="res://theme/blue_button_pressed.tres" type="StyleBox" id=4]
[ext_resource path="res://status_bar/StatusBar.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/font/ethnocentric rg.tres" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 22
font_data = ExtResource( 6 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -71.0
margin_right = 71.0
margin_bottom = 106.0
align = 1

[node name="BackButton" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 28.0
margin_top = -135.0
margin_right = 278.0
margin_bottom = -35.0
rect_min_size = Vector2( 250, 100 )
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 3 )
text = "Leave"

[node name="StatusBar" parent="." instance=ExtResource( 5 )]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -475.0
margin_top = -300.0
margin_bottom = 300.0
rect_min_size = Vector2( 475, 600 )
mouse_filter = 2
input_pass_on_modal_close_click = false

[node name="ScoreLabel" type="Label" parent="VBoxContainer"]
margin_right = 475.0
margin_bottom = 90.0
rect_min_size = Vector2( 0, 90 )
input_pass_on_modal_close_click = false
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Leaderboard"
valign = 1

[node name="ScoreValue" type="RichTextLabel" parent="VBoxContainer"]
margin_top = 94.0
margin_right = 475.0
margin_bottom = 594.0
rect_min_size = Vector2( 450, 500 )
mouse_filter = 2
input_pass_on_modal_close_click = false
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true

[node name="ScoreResult" type="Label" parent="VBoxContainer"]
visible = false
margin_top = 598.0
margin_right = 450.0
margin_bottom = 688.0
rect_min_size = Vector2( 0, 90 )
input_pass_on_modal_close_click = false
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "final position"
valign = 1

[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
